# IlluStory

./: .eslintrc.cjs  .gitignore  .prettierrc  .prettierrc.cjs  LICENSE  README.md  eslint.config.js  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tsconfig.json
server/: app.py  fonts.py  fs.py  gen_image.py  main.py  memory.py  my_logging.py  request.py  requirements.txt  start_server.bat  update.py
server/src/: fs.py  logging.py  memory.py  request.py
server/src/font_list/: Cargo.toml
src/: app.css  app.d.ts  app.html
src-tauri/: .gitignore  .taurignore  Cargo.toml  illustory.nsi  tauri.conf.json
src-tauri/resources/: Adventurer's Guild.scene  Eliane.char  Julian.char  default.preset
src-tauri/resources/server/: main.py  requirements.txt  start_server.bat  update.py
src-tauri/resources/server/src/: app.py  fonts.py  fs.py  gen_image.py  image.py  logging.py  memory.py  process.py  request.py
src-tauri/src/: main.rs
src/lib/: CommonCard.svelte  DragDropList.svelte  DragnDropList.svelte  FileDialog.svelte  api.ts  apiInfermatic.ts  apiKoboldAi.ts  apiOobabooga.ts  apiOobaboogaLegacy.ts  apiOpenAi.ts  card.ts  charSettings.ts  deepLApi.ts  fs.ts  history.ts  image.ts  imageApi.ts  index.ts  interfaces.ts  lorebook.ts  preset.ts  promptInterface.ts  scene.ts  session.ts  settings.ts  store.ts  tauriCompat.ts
src/routes/: +layout.svelte  +page.svelte  Input.svelte  Markdown.svelte  MyNavLi.svelte  Scene.svelte  SceneList.svelte
src/routes/about/: +page.svelte
types/: llama-tokenizer-js.d.ts  png-metadata-writer.d.ts
(+39 files in other folders)
