[package]
name = "illustory"
version = "0.9.1"
description = "IlluStory is an app which generates illustrated stories."
authors = ["Julian adventurer"]
license = ""
repository = ""
default-run = "illustory"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.0", features = [ "window-all", "shell-execute", "fs-exists", "fs-create-dir", "fs-copy-file", "http-request", "protocol-asset", "fs-read-dir", "dialog-open", "dialog-save", "fs-write-file", "path-all", "fs-read-file", "devtools"] }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-fs-extra = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
font-kit = "0.11"
trash = "3.0"
notify = "6.0"
chrono = "0.4"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
